# MaskedPanGenie_with_Subset_seeds

./: CMakeLists.txt  hmm.cpp  hmm.hpp  hmm_gpu.cu  hmm_gpu.h
demo/: 123.docx  mask.txt
src/: CMakeLists.txt  histogram.cpp  hmm.cpp  hmm_gpu.cu  jellyfishreader.cpp  merstring.cpp  pggtyper-graph.cpp  pggtyper-kmers.cpp  pggtyper-paths.cpp  pggtyper.cpp
